# jsonresume-renderer

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
src/: lib.rs  main.rs
src/templates/: resume.template
