[package]
name = "jsonresume-renderer"
version = "0.5.0"
authors = ["gapuchi <arjun.adhia@gmail.com>"]
description = "Generates a file from a JSON Resume and a template."
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.2.5", features = ["derive"] }
log = "0.4"
simple_logger = "1.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.6"
